waybar/.config/waybar/style.css
@import "../themes/kanagawa.css";

* {
  font-family: "JetBrainsMono Nerd Font";
  font-size: 16px;
  min-height: 0;
}

#waybar,
#workspaces,
#custom-music,
#tray,
#wireplumber,
#custom-brightness,
#temperature,
#cpu,
#memory,
#clock,
#custom-search,
#idle_inhibitor,
#custom-power {
  color: @foreground;
  background-color: @background;
  margin-top: 0.2rem;
}

#waybar {
  background: transparent;
  margin: 0.2rem;
}

#workspaces {
  border-radius: 1rem;
  margin-left: 0.2rem;
}

#workspaces button {
  color: @foreground;
  border-radius: 1rem;
  padding: 0.5rem;
}

#workspaces button.active {
  color: @sapphire;
  border-radius: 1rem;
}

#workspaces button:hover {
  color: @background;
  border-radius: 1rem;
}

#custom-music,
#wireplumber,
#custom-brightness,
#temperature,
#cpu,
#memory,
#tray,
#clock {
  padding: 0.5rem 1rem;
}

#custom-search,
#idle_inhibitor,
#custom-power {
  padding: 0.5rem;
  padding-left: 1rem;
}

#custom-music,
#tray {
  border-radius: 1rem;
}

#wireplumber,
#clock {
  border-radius: 1rem 0px 0px 1rem;
  margin-left: 1rem;
}

#memory,
#custom-power {
  border-radius: 0px 1rem 1rem 0px;
  margin-right: 0.2rem;
}

